[package]
name = "brainfuck-rs"
version = "0.1.0"
description = "A Brainfuck interpreter."
license = "MIT"
authors = ["Qirui Wang <qirui.wang@moegi.waseda.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
